logs/dag_id=rand_user/run_id=manual__2023-11-23T07:02:32.020246+00:00/task_id=Create_table/attempt=1.log
[2023-11-23T07:02:33.090+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: rand_user.Create_table manual__2023-11-23T07:02:32.020246+00:00 [queued]>
[2023-11-23T07:02:33.100+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: rand_user.Create_table manual__2023-11-23T07:02:32.020246+00:00 [queued]>
[2023-11-23T07:02:33.101+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-23T07:02:33.101+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 3
[2023-11-23T07:02:33.102+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-23T07:02:33.122+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): Create_table> on 2023-11-23 07:02:32.020246+00:00
[2023-11-23T07:02:33.129+0000] {standard_task_runner.py:55} INFO - Started process 8871 to run task
[2023-11-23T07:02:33.134+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'rand_user', 'Create_table', 'manual__2023-11-23T07:02:32.020246+00:00', '--job-id', '590', '--raw', '--subdir', 'DAGS_FOLDER/predictions.py', '--cfg-path', '/tmp/tmpyyftull1']
[2023-11-23T07:02:33.136+0000] {standard_task_runner.py:83} INFO - Job 590: Subtask Create_table
[2023-11-23T07:02:33.203+0000] {task_command.py:376} INFO - Running <TaskInstance: rand_user.Create_table manual__2023-11-23T07:02:32.020246+00:00 [running]> on host f71f95879a41
[2023-11-23T07:02:33.274+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Gaurav
AIRFLOW_CTX_DAG_ID=rand_user
AIRFLOW_CTX_TASK_ID=Create_table
AIRFLOW_CTX_EXECUTION_DATE=2023-11-23T07:02:32.020246+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-11-23T07:02:32.020246+00:00
[2023-11-23T07:02:33.284+0000] {base.py:71} INFO - Using connection ID 'source_db_***' for task execution.
[2023-11-23T07:02:33.292+0000] {sql.py:315} INFO - Running statement: 
    CREATE TABLE IF NOT EXISTS rand_users (
        uuid TEXT NOT NULL,
        title TEXT NOT NULL,
        firstname TEXT NOT NULL,
        lastname TEXT NOT NULL,
        gender TEXT NOT NULL,
        country TEXT NOT NULL,
        username TEXT NOT NULL,
        password TEXT NOT NULL,
        email TEXT NOT NULL,
        age INT NOT NULL,
    )
    , parameters: None
[2023-11-23T07:02:33.294+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 13:     )
             ^

[2023-11-23T07:02:33.304+0000] {taskinstance.py:1406} INFO - Marking task as UP_FOR_RETRY. dag_id=rand_user, task_id=Create_table, execution_date=20231123T070232, start_date=20231123T070233, end_date=20231123T070233
[2023-11-23T07:02:33.317+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 590 for task Create_table (syntax error at or near ")"
LINE 13:     )
             ^
; 8871)
[2023-11-23T07:02:33.345+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-11-23T07:02:33.383+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
